--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,7 @@ wp-content/plugins/
 wp-content/ai1wm-backups
 wp-content/aiowps_backups
 wp-content/bps-backup
+wp-content/updraft
 
 wp-includes/
 wp-admin/
